--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-notifications": "^0.32.16",
     "expo-router": "^6.0.23",
     "expo-secure-store": "^15.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "^15.0.10",
